fix build coverage